fix: optimiza headwrap + elimina redes sociales + cambios en portafolio y modal de portafolio

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -160,6 +160,12 @@ body {
 	color: white;
 }
 
+.btn-close-container {
+	position: absolute;
+	right: 16px;
+	top: 16px;
+}
+
 .navbar-default {
 	border-color: transparent;
 	background-color: var(--accent-color);
@@ -313,7 +319,7 @@ a:after {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/headwrap/puente.png) no-repeat center;
+	background: url(../img/headwrap/puente-min.png) no-repeat center;
 	/* margin-top: -50px; */
 	padding-top: 120px;
 	text-align: center;
